--- a/add.html
+++ b/add.html
@@ -1,12 +1,25 @@
 <head>
 
 </head>
+
 <body>
     <form>
         <div>
-        <label>Enter your todo</label>
-        <input autofocus placeholder="Need to do"/>
-    </div>
-    <button type="submit">Add</button>
+            <label>Enter your todo</label>
+            <input autofocus placeholder="Need to do" />
+        </div>
+        <button type="submit">Add</button>
     </form>
+
+    <script>
+        document
+            .querySelector('form')
+            .addEventListener('submit',
+                (event) => {
+                    event.preventDefault();
+
+                    debugger;
+                }
+            )
+    </script>
 </body>
