--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <head>
 
 </head>
+
 <body>
     <h1>My todos</h1>
 
@@ -10,17 +11,22 @@
 
     <script>
         const electron = require('electron');
-        const {ipcRenderer} = electron;
+        const {
+            ipcRenderer
+        } = electron;
 
 
         ipcRenderer.on('todo:add', (event, todo) => {
             const li = document.createElement('li');
             const text = document.createTextNode(todo);
-            
+
             li.appendChild(text);
 
             document.querySelector('ul').appendChild(li);
         });
 
+        ipcRenderer.on('todo:clearAll', (event) => {
+            document.querySelector('ul').innerHTML = '';
+        })
     </script>
 </body>
